# PaperDOS

./: .gitignore  AGENTS.md  README.md  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl  registry.json
.cargo/: config.toml
.github/workflows/: cross-check.yml  fmt.yml  host-tests.yml
docs/: PRD_Web_Flasher.md  PaperDOS_Technical_Design_v0.1.md  X4_Display_Bringup_Notes.md
kernel/: Cargo.toml
kernel/include/: pd_loader.h
kernel/src/: abi.rs  boot.rs  boot_app.rs  jump.rs  launcher.rs  lib.rs  loader.rs  main.rs  pd_loader.c  pdb.rs  platform.rs
kernel/src/device/: display.rs  mod.rs  raw_gpio.rs  serial.rs  storage.rs
kernel/src/display/: driver.rs  mod.rs  refresh.rs  render.rs  scene.rs  ssd1677.rs  transport.rs
kernel/src/input/: adc.rs  debounce.rs  decoder.rs  longpress.rs  mod.rs  poller.rs
kernel/src/storage/: block.rs  error.rs  fs.rs  mod.rs  sd.rs
kernel/src/syscall/: display.rs  font.rs  fs.rs  input.rs  mem.rs  mod.rs  net.rs  sys.rs
kernel/tests/: abi_layout.rs  app_load_run.rs  boot_app.rs  boot_smoke.rs  display_buf.rs  display_device.rs  display_flush.rs  display_refresh.rs  display_render.rs  display_scene.rs  display_transport.rs  fs_global.rs  input_adc.rs  input_debounce.rs  input_decoder.rs  input_global.rs  input_longpress.rs  input_poller.rs  input_types.rs  jump_app.rs  launcher_loop.rs  launcher_render.rs  launcher_scan.rs  launcher_stages.rs  loader_dry_run.rs  pdb_parse.rs  platform.rs  serial_write.rs  storage_block_device.rs  storage_fs_dir.rs  storage_fs_open.rs  storage_fs_rw.rs  storage_fs_stat.rs  storage_fs_state.rs  storage_mock.rs  storage_sd_capacity.rs  storage_sd_init.rs  storage_sd_rw.rs  storage_types.rs  syscall_display.rs  (+4 more)
kernel/tests/common/: mod.rs
runner-logs/claude/: bd-976e.1.jsonl  bd-976e.2.jsonl  bd-976e.4.jsonl  bd-976e.5.jsonl  bd-976e.6.jsonl  bd-976e.7.jsonl  bd-976e.8.jsonl  bd-976e.9.jsonl
sdk/include/: paperdos.h  (+1 more)
tools/: pdimage.py  pyproject.toml
(+8 files in other folders)
