[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[features]
default = []
device = []

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel-device"
path = "src/main.rs"
required-features = ["device"]

[dependencies]

[target.'cfg(all(target_arch = "riscv32", target_os = "none"))'.dependencies]
embassy-executor = "0.9.0"
esp-hal = { version = "1.0.0", default-features = false, features = ["esp32c3", "rt", "unstable"] }
esp-rtos = { version = "0.2.0", default-features = false, features = ["esp32c3", "embassy"] }
static_cell = "2.1.0"
